--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ h1 {
 	font-size: 24px;
 	margin-bottom: 20px;
 }
-
 .result {
 	font-size: 18px;
 	font-weight: bold;
@@ -36,6 +35,7 @@ h1 {
 	border-radius: 5px;
 	background-color: #fafafa;
 	overflow-y: auto;
+	white-space: pre-line;
 }
 
 .loader {
